--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Ravi42244/Weather_App/issues"
   },
-  "homepage": "https://github.com/Ravi42244/Weather_App#readme"
+  "homepage": "https://github.com/Ravi42244/Weather_App#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "request": "^2.88.2"
+  }
 }
