--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Ravi42244/Weather_App#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "hbs": "^4.2.0",
     "request": "^2.88.2"
   }
 }
